builder/tests/10-generic-struct.stderr
error: expected struct without generic type parameters
 --> tests/10-generic-struct.rs:4:12
  |
4 | struct Test<T, U, V> {
  |            ^^^^^^^^^
